Update to latest setup

--- a/config.d/config.conf
+++ b/config.d/config.conf
@@ -1,7 +1,13 @@
 # exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
+exec nm-applet
+exec blueman-applet
+exec protonmail-bridge
+
+# Set Font
+font pango:MesloLGL Regular 11
 
 #Custom Shortcuts
-bindsym $mod+Control+l exec swaylock -i $wallpaper
+bindsym $mod+Control+l exec swaylock -f -i $wallpaper
 #bindsym $mod+x move workspace to output next
 
 #Startup Apps
@@ -54,3 +60,6 @@ bindsym $mod+Shift+n exec swaync-client -t -sw
 
 # Remove Window Borders
 default_border pixel
+
+# Screenshot Tool
+bindsym $mod+Shift+s exec ~/Applications/shotman/shotman --capture region
